--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -4791,6 +4791,16 @@ li.checked::marker { content: &quot;\2612&quot;; }
              <property name="text">
               <string>Unlock</string>
              </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>../main/res/unlock.png</normaloff>../main/res/unlock.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
             </widget>
            </item>
           </layout>
@@ -4800,6 +4810,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <widget class="QFrame" name="paramedic_frame">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="styleSheet">
              <string notr="true">QWidget#paramedic_frame{border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
             </property>
@@ -4810,7 +4826,66 @@ li.checked::marker { content: &quot;\2612&quot;; }
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_2">
-             <item row="3" column="1">
+             <item row="0" column="0" colspan="4">
+              <widget class="QLabel" name="paramedicsLabel">
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:white</string>
+               </property>
+               <property name="text">
+                <string>FOR PARAMEDICS</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="3">
+              <widget class="QLabel" name="label_14">
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:white</string>
+               </property>
+               <property name="text">
+                <string>Or alternatively,</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="2">
+              <widget class="QLabel" name="label_28">
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:white</string>
+               </property>
+               <property name="text">
+                <string>Provide phone number to get passcode.</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2" rowspan="2">
+              <widget class="Line" name="line_4">
+               <property name="styleSheet">
+                <string notr="true">color:rgb(50,50,50)</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
               <widget class="QPushButton" name="get_passcode_button">
                <property name="minimumSize">
                 <size>
@@ -4836,61 +4911,19 @@ li.checked::marker { content: &quot;\2612&quot;; }
                <property name="text">
                 <string>Get Passcode</string>
                </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLineEdit" name="paramedic_phone_number_lineedit">
-               <property name="minimumSize">
+               <property name="icon">
+                <iconset>
+                 <normaloff>../main/res/get_passcode.png</normaloff>../main/res/get_passcode.png</iconset>
+               </property>
+               <property name="iconSize">
                 <size>
-                 <width>0</width>
-                 <height>50</height>
+                 <width>32</width>
+                 <height>32</height>
                 </size>
                </property>
-               <property name="maximumSize">
-                <size>
-                 <width>16777215</width>
-                 <height>50</height>
-                </size>
-               </property>
-               <property name="font">
-                <font>
-                 <pointsize>16</pointsize>
-                </font>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:5px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;</string>
-               </property>
               </widget>
              </item>
-             <item row="2" column="0" colspan="2">
-              <widget class="QLabel" name="paramedicsLabel">
-               <property name="font">
-                <font>
-                 <pointsize>16</pointsize>
-                </font>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">color:white</string>
-               </property>
-               <property name="text">
-                <string>FOR PARAMEDICS: Provide phone number</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="2" rowspan="2">
-              <widget class="Line" name="line_4">
-               <property name="styleSheet">
-                <string notr="true">color:rgb(50,50,50)</string>
-               </property>
-               <property name="frameShadow">
-                <enum>QFrame::Plain</enum>
-               </property>
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="3">
+             <item row="2" column="3">
               <widget class="QPushButton" name="notify_admin_button">
                <property name="minimumSize">
                 <size>
@@ -4916,20 +4949,39 @@ li.checked::marker { content: &quot;\2612&quot;; }
                <property name="text">
                 <string>Notify Admin</string>
                </property>
+               <property name="icon">
+                <iconset>
+                 <normaloff>../main/res/notify.png</normaloff>../main/res/notify.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
+               </property>
               </widget>
              </item>
-             <item row="2" column="3">
-              <widget class="QLabel" name="label_14">
+             <item row="2" column="0">
+              <widget class="QLineEdit" name="paramedic_phone_number_lineedit">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>50</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>50</height>
+                </size>
+               </property>
                <property name="font">
                 <font>
                  <pointsize>16</pointsize>
                 </font>
                </property>
                <property name="styleSheet">
-                <string notr="true">color:white</string>
-               </property>
-               <property name="text">
-                <string>Or alternatively,</string>
+                <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:5px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;</string>
                </property>
               </widget>
              </item>
@@ -4938,6 +4990,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
           </item>
           <item>
            <widget class="QFrame" name="admin_only_frame">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="styleSheet">
              <string notr="true">.QFrame{border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
             </property>
@@ -4947,8 +5005,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <layout class="QGridLayout" name="gridLayout_22">
-             <item row="0" column="0">
+            <layout class="QHBoxLayout" name="horizontalLayout_11">
+             <item>
               <widget class="QLabel" name="label_26">
                <property name="font">
                 <font>
@@ -4966,21 +5024,46 @@ li.checked::marker { content: &quot;\2612&quot;; }
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QPushButton" name="notify_admin_button_3">
+               <property name="minimumSize">
+                <size>
+                 <width>200</width>
+                 <height>50</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>200</width>
+                 <height>50</height>
+                </size>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:25px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;
+</string>
+               </property>
+               <property name="text">
+                <string>Notify Admin</string>
+               </property>
+               <property name="icon">
+                <iconset>
+                 <normaloff>../main/res/notify.png</normaloff>../main/res/notify.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer_10">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
           </item>
           <item>
            <widget class="QFrame" name="frame_6">
@@ -5011,13 +5094,14 @@ li.checked::marker { content: &quot;\2612&quot;; }
                <property name="font">
                 <font>
                  <pointsize>16</pointsize>
+                 <bold>true</bold>
                 </font>
                </property>
                <property name="styleSheet">
                 <string notr="true">color:white</string>
                </property>
                <property name="text">
-                <string>FOR ADMIN ONLY:</string>
+                <string>FOR ADMIN ONLY</string>
                </property>
                <property name="buddy">
                 <cstring>forgotPasswordPushButton</cstring>
@@ -5049,6 +5133,16 @@ li.checked::marker { content: &quot;\2612&quot;; }
                </property>
                <property name="text">
                 <string>Forgot Passcode</string>
+               </property>
+               <property name="icon">
+                <iconset>
+                 <normaloff>../main/res/forgot.png</normaloff>../main/res/forgot.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
                </property>
               </widget>
              </item>
